[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Art/Sprites/Player/SOUL.png" type="Texture" id=1]
[ext_resource path="res://addons/GodotTIE/Fonts/DT-Mono.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/crypt-of-tomorrow.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Art/Sprites/Styles/MenuPanel.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/MenuPanel.gd" type="Script" id=5]

[node name="infoPanel" type="Panel"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -292.0
margin_top = 47.0
margin_right = -150.0
margin_bottom = 164.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuPanel" type="Panel" parent="."]
margin_top = 126.0
margin_right = 142.0
margin_bottom = 263.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option 1" type="Label" parent="menuPanel"]
margin_left = 55.1768
margin_top = 20.0213
margin_right = 111.177
margin_bottom = 49.0213
custom_fonts/font = ExtResource( 2 )
text = "ITEM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="menuPanel/Option 1"]
margin_left = -25.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 96.0
rect_scale = Vector2( 0.18868, 0.18868 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option 2" type="Label" parent="menuPanel"]
margin_left = 55.1315
margin_top = 51.9704
margin_right = 139.131
margin_bottom = 80.9704
custom_fonts/font = ExtResource( 2 )
text = "STAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="menuPanel/Option 2"]
visible = false
margin_left = -25.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 96.0
rect_scale = Vector2( 0.18868, 0.18868 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option 3" type="Label" parent="menuPanel"]
margin_left = 54.7989
margin_top = 81.7894
margin_right = 138.799
margin_bottom = 110.789
custom_fonts/font = ExtResource( 2 )
text = "CELL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="menuPanel/Option 3"]
visible = false
margin_left = -25.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 96.0
rect_scale = Vector2( 0.18868, 0.18868 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 13.0931
margin_top = 14.1501
margin_right = 83.0931
margin_bottom = 43.1501
custom_fonts/font = ExtResource( 2 )
text = "EMPTY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 15.4322
margin_top = 43.0
margin_right = 57.4322
margin_bottom = 72.1862
custom_fonts/font = ExtResource( 3 )
text = "LV"

[node name="LevelValue" type="Label" parent="Level"]
margin_left = 31.0
margin_right = 73.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hitpoints" type="Label" parent="."]
margin_left = 15.0
margin_top = 62.3326
margin_right = 57.0
margin_bottom = 92.3326
custom_fonts/font = ExtResource( 3 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitpointsValue" type="Label" parent="Hitpoints"]
margin_left = 31.0
margin_right = 73.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "20\\20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="Label" parent="."]
margin_left = 14.8909
margin_top = 80.0
margin_right = 56.8909
margin_bottom = 110.0
custom_fonts/font = ExtResource( 3 )
text = "G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldValue" type="Label" parent="Gold"]
margin_left = 31.0
margin_right = 73.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="itemMenu" type="Panel" parent="."]
visible = false
margin_left = 153.0
margin_top = -1.0
margin_right = 510.0
margin_bottom = 355.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="itemMenu"]
margin_left = 49.0
margin_top = 24.0
margin_right = 254.0
margin_bottom = 286.0
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option 1" type="Label" parent="itemMenu"]
margin_left = 57.1768
margin_top = 301.021
margin_right = 113.177
margin_bottom = 330.021
custom_fonts/font = ExtResource( 2 )
text = "USE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="itemMenu/Option 1"]
visible = false
margin_left = -25.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 96.0
rect_scale = Vector2( 0.18868, 0.18868 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option 2" type="Label" parent="itemMenu"]
margin_left = 149.177
margin_top = 301.021
margin_right = 205.177
margin_bottom = 330.021
custom_fonts/font = ExtResource( 2 )
text = "INFO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="itemMenu/Option 2"]
visible = false
margin_left = -25.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 96.0
rect_scale = Vector2( 0.18868, 0.18868 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option 3" type="Label" parent="itemMenu"]
margin_left = 258.177
margin_top = 301.021
margin_right = 314.177
margin_bottom = 330.021
custom_fonts/font = ExtResource( 2 )
text = "DROP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="itemMenu/Option 3"]
visible = false
margin_left = -25.0
margin_top = 6.0
margin_right = 65.0
margin_bottom = 96.0
rect_scale = Vector2( 0.18868, 0.18868 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statMenu" type="Panel" parent="."]
visible = false
margin_left = 153.0
margin_top = -1.0
margin_right = 518.0
margin_bottom = 410.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cellMenu" type="Panel" parent="."]
visible = false
margin_left = 153.0
margin_top = -1.0
margin_right = 518.0
margin_bottom = 271.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="cellMenu"]
margin_left = 49.0
margin_top = 24.0
margin_right = 254.0
margin_bottom = 249.0
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}
